# ai

./: .dockerignore  .gitignore  404.html  AI_Statement_of_Values.md  Makefile  README.md  flake.nix  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  pr_labels.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  config.yml
.github/actions/install-frontend-deps/: action.yml
.github/workflows/: build-container.yml  frontend-checks.yml  frontend-tests.yml  mkdocs-material.yml  python-checks.yml  python-tests.yml  release.yml
CODE_OF_CONDUCT/: index.html
RELEASE/: index.html
aittor/app/: api_app.py  run_app.py
aittor/app/api/: dependencies.py  sockets.py
aittor/app/invocations/: __init__.py  baseinvocation.py  blend_latents.py  canny.py  collections.py  color_map.py  compel.py  constants.py  content_shuffle.py  controlnet_image_processors.py  create_denoise_mask.py  create_gradient_mask.py  crop_latents.py  cv.py  denoise_latents.py  depth_anything.py  dw_openpose.py  facetools.py  fields.py  flux_controlnet.py  flux_denoise.py  flux_lora_loader.py  flux_text_encoder.py  flux_vae_decode.py  flux_vae_encode.py  grounding_dino.py  hed.py  ideal_size.py  image.py  image_to_latents.py  infill.py  ip_adapter.py  latents_to_image.py  lineart.py  lineart_anime.py  mask.py  math.py  mediapipe_face.py  metadata.py  mlsd.py  (+17 more)
aittor/app/services/: invocation_services.py  operator.py
aittor/app/shared/: models.py
aittor/app/util/: controlnet_utils.py  custom_openapi.py  step_callback.py  ti_utils.py
aittor/backend/: __init__.py  model_patcher.py  raw_model.py  spandrel_image_to_image_model.py  textual_inversion.py
aittor/backend/flux/: denoise.py  model.py  trajectory_guidance_extension.py  util.py
aittor/backend/image_util/: __init__.py  canny.py  content_shuffle.py  hed.py  invisible_watermark.py  lineart.py  lineart_anime.py  safety_checker.py
aittor/backend/ip_adapter/: README.md  ip_adapter.py
aittor/backend/lora/: lora_model_raw.py  lora_patcher.py
aittor/backend/model_hash/: model_hash.py
aittor/backend/model_manager/: __init__.py  config.py  merge.py  probe.py  search.py  starter_models.py
aittor/backend/onnx/: onnx_runtime.py
aittor/backend/quantization/: bnb_llm_int8.py  bnb_nf4.py
aittor/backend/stable_diffusion/: __init__.py  denoise_context.py  diffusers_pipeline.py  diffusion_backend.py  extensions_manager.py  multi_diffusion_pipeline.py
aittor/backend/tiles/: tiles.py
aittor/backend/util/: __init__.py  attention.py  catch_sigint.py  db_maintenance.py  devices.py  hotfixes.py  logging.py  original_weights_storage.py  test_utils.py
aittor/configs/stable-diffusion/: v1-finetune.yaml  v1-finetune_style.yaml  v1-inference-v.yaml  v1-inpainting-inference.yaml  v1-m1-finetune.yaml  v2-inference-v.yaml  v2-inference.yaml
aittor/frontend/: __init__.py
aittor/frontend/cli/: arg_parser.py
aittor/frontend/install/: __init__.py  import_images.py
aittor/frontend/web/: .eslintrc.js  .prettierrc.js  __init__.py  index.html  package.json  pnpm-lock.yaml  vite.config.mts
aittor/invocation_api/: __init__.py
aittor/version/: __init__.py
configuration/: index.html
contributing/: index.html
contributing/ARCHITECTURE/: index.html
contributing/DOWNLOAD_QUEUE/: index.html
contributing/INVOCATIONS/: index.html
contributing/LOCAL_DEVELOPMENT/: index.html
contributing/MODEL_MANAGER/: index.html
contributing/TESTS/: index.html
contributing/contribution_guides/development/: index.html
contributing/contribution_guides/documentation/: index.html
contributing/contribution_guides/newContributorChecklist/: index.html
contributing/contribution_guides/translation/: index.html
contributing/contributors/: index.html
contributing/dev-environment/: index.html
contributing/frontend/: index.html
docker/: .env.sample  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  run.sh  runpod-readme.md
docs/: CODE_OF_CONDUCT.md  RELEASE.md  configuration.md  faq.md  index.md
docs/contributing/: ARCHITECTURE.md  DOWNLOAD_QUEUE.md  INVOCATIONS.md  LOCAL_DEVELOPMENT.md  MODEL_MANAGER.md  TESTS.md  contributors.md  dev-environment.md  index.md
docs/features/: database.md  gallery.md
docs/help/: diffusion.md  gettingStartedWithAI.md
docs/installation/: docker.md  index.md  installer.md  manual.md  models.md  patchmatch.md  requirements.md
docs/nodes/: NODES.md  NODES_MIGRATION_V3_V4.md  comfyToNode.md  communityNodes.md  contributingNodes.md  defaultNodes.md  invocation-api.md  overview.md
faq/: index.html
features/database/: index.html
features/gallery/: index.html
help/SAMPLER_CONVERGENCE/: index.html
help/diffusion/: index.html
help/gettingStartedWithAI/: index.html
installation/: index.html
installation/docker/: index.html
installation/installer/: index.html
installation/manual/: index.html
installation/models/: index.html
installation/patchmatch/: index.html
installation/requirements/: index.html
installer/: create_installer.sh  install.bat.in  install.sh.in  readme.txt  tag_release.sh
installer/lib/: installer.py  main.py  messages.py
installer/templates/: run.bat.in  run.sh.in
nodes/NODES/: index.html
nodes/NODES_MIGRATION_V3_V4/: index.html
nodes/comfyToNode/: index.html
nodes/communityNodes/: index.html
nodes/contributingNodes/: index.html
nodes/defaultNodes/: index.html
nodes/invocation-api/: index.html
nodes/overview/: index.html
scripts/: app-web.py  generate_openapi_schema.py  get_external_contributions.py  probe-model.py  update_config_docstring.py
search/: search_index.json
tests/: conftest.py  test_config.py  test_docs.py  test_graph_execution_state.py  test_invocation_cache_memory.py  test_item_storage_memory.py  test_model_hash.py  test_model_probe.py  test_model_search.py  test_node_graph.py  test_nodes.py  test_object_serializer_disk.py  test_path.py  test_profiler.py  test_session_queue.py  test_sqlite_migrator.py
tests/fixtures/: sqlite_database.py
tests/inpainting/: original.json
(+865 files in other folders)
